# kla_dec_2023

./: .gitignore  Cargo.toml  README.md
cpp/array_bounds/: CMakeLists.txt  array_bounds.cpp
cpp/atomics/: CMakeLists.txt  atomics.cpp
cpp/byte_overflow/: CMakeLists.txt  overflow.cpp
cpp/data_race/: CMakeLists.txt  data_race.cpp
cpp/dead_ref/: CMakeLists.txt  dead_ref.cpp
cpp/double_fn/: CMakeLists.txt  double.cpp
cpp/hello_world/: CMakeLists.txt
cpp/move/: CMakeLists.txt  move.cpp
cpp/mutex/: CMakeLists.txt
cpp/nullptr/: CMakeLists.txt  nullptr.cpp
cpp/type_changes/: CMakeLists.txt  typechange.cpp
projects/docker/hello_web_docker/: Cargo.toml  Dockerfile  README.Docker.md  compose.yaml
projects/docker/hello_web_docker/src/: main.rs
projects/part10/c_rust/: build.rs
projects/part10/c_rust/src/: crust.c
projects/part10/rust_c/: build.rs
projects/part2/atomics/src/: main.rs
projects/part2/criterion_bench/: Cargo.toml
projects/part2/destructors/: Cargo.toml
projects/part2/destructors/src/: main.rs
projects/part2/double_fn/: Cargo.toml
projects/part2/double_fn/src/: main.rs
projects/part2/mutex/src/: main.rs
projects/part2/no_null/: Cargo.toml
projects/part2/no_null/src/: main.rs
projects/part2/refcount/src/: main.rs
projects/part2/simple_bench/: Cargo.toml
projects/part2/unit_test/src/: lib.rs
projects/part2/unsafe_threading/: Cargo.toml
projects/part2/unsafe_threading/src/: main.rs
projects/part3/login_enum/: Cargo.toml
projects/part3/login_enum/src/: main.rs
projects/part3/login_enum_data/: Cargo.toml
projects/part3/login_enum_data/src/: main.rs
projects/part3/login_enum_option/: Cargo.toml
projects/part3/login_enum_option/src/: main.rs
projects/part3/login_hash/: Cargo.toml
projects/part3/login_hash/src/: main.rs
projects/part3/login_hashmap/: Cargo.toml
projects/part3/login_hashmap/src/: main.rs
projects/part3/login_json/: Cargo.toml
projects/part3/login_json/src/: main.rs
projects/part3/login_lib_enum/: Cargo.toml
projects/part3/login_lib_enum/src/: lib.rs
projects/part3/login_lib_enum_data/: Cargo.toml
projects/part3/login_lib_enum_data/src/: lib.rs
projects/part3/login_lib_enum_option/: Cargo.toml
projects/part3/login_lib_enum_option/src/: lib.rs
projects/part3/login_lib_hash/: Cargo.toml
projects/part3/login_lib_hash/src/: lib.rs
projects/part3/login_lib_hashmap/: Cargo.toml
projects/part3/login_lib_hashmap/src/: lib.rs
projects/part3/login_lib_json/: Cargo.toml  users.json
projects/part3/login_lib_json/src/: lib.rs
projects/part3/login_lib_lm/: Cargo.toml
projects/part3/login_lib_lm/src/: lib.rs
projects/part3/login_lib_simple/: Cargo.toml
projects/part3/login_lib_simple/src/: lib.rs
projects/part3/login_lib_struct/: Cargo.toml
projects/part3/login_lib_struct/src/: lib.rs
projects/part3/login_lib_text/: Cargo.toml
projects/part3/login_lib_text/src/: lib.rs
projects/part3/login_lib_vec/: Cargo.toml
projects/part3/login_lib_vec/src/: lib.rs
projects/part3/login_manager/: Cargo.toml
projects/part3/login_manager/src/: main.rs
projects/part3/login_simple/: Cargo.toml
projects/part3/login_simple/src/: main.rs
projects/part3/login_struct/: Cargo.toml
projects/part3/login_struct/src/: main.rs
projects/part3/login_text/: Cargo.toml
projects/part3/login_text/src/: main.rs
projects/part3/login_vec/: Cargo.toml
projects/part3/login_vec/src/: main.rs
projects/part4/mutex/: Cargo.toml
projects/part5/buffered_reader/: warandpeace.txt
projects/part5/hello_async_spawn_futures/: Cargo.toml
projects/part5/hello_async_spawn_futures/src/: main.rs
projects/part7/database/: .env
projects/part7/hello_web/src/: hello.html
projects/part7/thumbnail_server/: .env
projects/part7/thumbnail_server/src/: index.html  redirect.html  search.html
projects/wasm/wasi_hello_world/: Cargo.toml
projects/wasm/wasi_hello_world/src/: main.rs
projects/wasm/wasm_lib/: Cargo.toml  build.sh
projects/wasm/wasm_lib/src/: lib.rs
projects/wasm/wasm_web_server/: Cargo.toml
projects/wasm/wasm_web_server/src/: main.rs
projects/wasm/wasm_web_server/web/: hello_wasm.html  wasm_lib.js  wasm_lib_bg.wasm
src/: main.rs
training_manual/: book.toml
training_manual/src/: Audit.md  BuildProfiles.md  Cleverness.md  Clippy.md  Clone.md  CompileTimes.md  Deny.md  Dependencies.md  Documentation.md  DomainBoundaries.md  Floats.md  Formatting.md  Iterators.md  ManageDependencies.md  OOPs.md  Outdated.md  PlatformSpecific.md  SUMMARY.md  SmallFunctions.md  TANSTAAFL.md  TypeSystem.md  YAGNI.md  async_pinning.md  async_select.md  async_tokio.md  async_unit_tests.md  avoiding_bugs.md  basic_workshop.md  benchmarking.md  borrow_checker.md  bp_code.md  bp_gen.md  bp_tooling.md  class_intro.md  data_race_protection.md  debugging.md  dependencies.md  ecosystem_intro.md  enums_serialize.md  errors_debug_intro.md  (+39 more)
